--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,5 +2,6 @@
   "routes.home.name": "Home",
   "routes.downloads.name": "Downloads",
   "routes.faq.name": "FAQ",
-  "routes.themes.name": "Themes"
+  "routes.themes.name": "Themes",
+  "general.locale": "Locale"
 }
