--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,5 +7,17 @@
   "routes.downloads.name": "Скачать",
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Темы",
-  "general.locale": "Язык"
+  "general.locale": "Язык",
+  "footer.short-description": "Играйте в Майнкрафт без ограничений.",
+  "footer.about.title": "О лаунчере",
+  "footer.about.link.contribute": "Внести вклад",
+  "footer.about.link.faq": "Частые вопросы",
+  "footer.about.link.download": "Скачать",
+  "footer.community.title": "Сообщество",
+  "footer.community.link.telegram-channel": "Telegram-канал",
+  "footer.community.link.telegram-chat": "Telegram-чат",
+  "footer.community.link.follow-on-github": "Подписаться на Github",
+  "footer.project.title": "Проект",
+  "footer.project.source-code": "Исходный код",
+  "footer.project.github-issues": "Github Issues"
 }
