feat: add some translations that are needed for home page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,17 @@
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Themes",
   "general.locale": "Locale",
+  "pages.home.hero.title": "Download Freesm Launcher for",
+  "pages.home.hero.description": "Freesm Launcher is a custom launcher for Minecraft that allows you to play with offline account without any restrictions.",
+  "pages.home.hero.download-now": "Download Now",
+  "pages.home.features.open-source.title": "Open Source",
+  "pages.home.features.open-source.description": "Freesm Launcher is an open source fork of Prism Launcher. All launcher code is available under the GPL-3.0 license.",
+  "pages.home.features.drm-free.title": "DRM-free",
+  "pages.home.features.drm-free.description": "Easily play Minecraft without any restrictions, even if you don't have an online account.",
+  "pages.home.features.performance.title": "Performance",
+  "pages.home.features.performance.description": "Freesm Launcher has incredible speed and takes up only 30 megabytes of RAM thanks to Qt toolkit.",
+  "pages.home.features.customization.title": "Customization",
+  "pages.home.features.customization.description": "Freesm Launcher has its own theme with catppuccin colors and Microsoft Fluent icons. In addition, the launcher also allows you to customize the menu, supports custom themes and backgrounds (even gifs).",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
   "footer.about.link.contribute": "Contribute",
