--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,6 +8,17 @@
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Темы",
   "general.locale": "Язык",
+  "pages.home.hero.title": "",
+  "pages.home.hero.description": "",
+  "pages.home.hero.download-now": "",
+  "pages.home.features.open-source.title": "",
+  "pages.home.features.open-source.description": "",
+  "pages.home.features.drm-free.title": "",
+  "pages.home.features.drm-free.description": "",
+  "pages.home.features.performance.title": "",
+  "pages.home.features.performance.description": "",
+  "pages.home.features.customization.title": "",
+  "pages.home.features.customization.description": "",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
