--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -8,6 +8,17 @@
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Теми",
   "general.locale": "Мова",
+  "pages.home.hero.title": "",
+  "pages.home.hero.description": "",
+  "pages.home.hero.download-now": "",
+  "pages.home.features.open-source.title": "",
+  "pages.home.features.open-source.description": "",
+  "pages.home.features.drm-free.title": "",
+  "pages.home.features.drm-free.description": "",
+  "pages.home.features.performance.title": "",
+  "pages.home.features.performance.description": "",
+  "pages.home.features.customization.title": "",
+  "pages.home.features.customization.description": "",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
   "footer.about.link.contribute": "Зробити внесок",
