feat: implement the launcher instances store

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,17 +8,17 @@
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Темы",
   "general.locale": "Язык",
-  "pages.home.hero.title": "",
-  "pages.home.hero.description": "",
-  "pages.home.hero.download-now": "",
-  "pages.home.features.open-source.title": "",
-  "pages.home.features.open-source.description": "",
-  "pages.home.features.drm-free.title": "",
-  "pages.home.features.drm-free.description": "",
-  "pages.home.features.performance.title": "",
-  "pages.home.features.performance.description": "",
-  "pages.home.features.customization.title": "",
-  "pages.home.features.customization.description": "",
+  "pages.home.hero.title": "Установите Freesm Launcher для",
+  "pages.home.hero.description": "Freesm Launcher - это кастомный лаунчер для Майнкрафта, который позволяет играть в него бесплатно.",
+  "pages.home.hero.download-now": "Скачать",
+  "pages.home.features.open-source.title": "Открытый исходный код",
+  "pages.home.features.open-source.description": "Freesm Launcher - это форк Prism Launcher с открытым исходным кодом, который находится под лицензией GPL-3.0.",
+  "pages.home.features.drm-free.title": "Без DRM",
+  "pages.home.features.drm-free.description": "С лёгкостью играйте в Майнкрафт без каких-либо ограничений, даже если у Вас нет лицензионного аккаунта.",
+  "pages.home.features.performance.title": "Производительность",
+  "pages.home.features.performance.description": "Лаунчер занимает всего 30 мегабайт ОЗУ и работает невероятно шустро благодаря Qt toolkit.",
+  "pages.home.features.customization.title": "Кастомизация",
+  "pages.home.features.customization.description": "В Freesm Launcher встроена собственная тема с цветами catppuccin и иконками Microsoft Fluent. Помимо этого, лаунчер позволяет настраивать меню, поддерживает кастомные темы и фоны (даже гифки).",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
@@ -31,15 +31,15 @@
   "footer.project.title": "Проект",
   "footer.project.source-code": "Исходный код",
   "footer.project.github-issues": "Github Issues",
-  "launcher.add-instance": "",
-  "launcher.folders": "",
-  "launcher.settings": "",
-  "launcher.help": "",
-  "launcher.update": "",
-  "launcher.no-default-account": "",
-  "launcher.manage-accounts": "",
-  "launcher.more-news": "",
-  "launcher.maintainer": "",
+  "launcher.add-instance": "Добавить сборку...",
+  "launcher.folders": "Папки",
+  "launcher.settings": "Настройки...",
+  "launcher.help": "Помощь",
+  "launcher.update": "Обновить",
+  "launcher.no-default-account": "Нет учётной записи по умолчанию",
+  "launcher.manage-accounts": "Управление учётными записями...",
+  "launcher.more-news": "Все новости",
+  "launcher.maintainer": "Сопровождающий",
   "launcher.profile-hotkey": "Ctrl+0",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
