--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -8,17 +8,17 @@
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Теми",
   "general.locale": "Мова",
-  "pages.home.hero.title": "",
-  "pages.home.hero.description": "",
-  "pages.home.hero.download-now": "",
-  "pages.home.features.open-source.title": "",
-  "pages.home.features.open-source.description": "",
-  "pages.home.features.drm-free.title": "",
-  "pages.home.features.drm-free.description": "",
-  "pages.home.features.performance.title": "",
-  "pages.home.features.performance.description": "",
-  "pages.home.features.customization.title": "",
-  "pages.home.features.customization.description": "",
+  "pages.home.hero.title": "Встановіть Freesm Launcher для",
+  "pages.home.hero.description": "Freesm Launcher — це кастомний лаунчер для Minecraft, який дозволяє грати з офлайн-акаунтом без будь-яких обмежень.",
+  "pages.home.hero.download-now": "Завантажити",
+  "pages.home.features.open-source.title": "Відкритий вихідний код",
+  "pages.home.features.open-source.description": "Freesm Launcher — це форк Prism Launcher з відкритим вихідним кодом, який знаходиться під ліцензією GPL-3.0.",
+  "pages.home.features.drm-free.title": "Без DRM",
+  "pages.home.features.drm-free.description": "Легко грайте в Minecraft без обмежень, навіть якщо у вас немає онлайн-акаунту.",
+  "pages.home.features.performance.title": "Продуктивність",
+  "pages.home.features.performance.description": "Freesm Launcher має неймовірну швидкість і займає лише 30 мегабайт оперативної пам’яті завдяки інструментарію Qt.",
+  "pages.home.features.customization.title": "Налаштування",
+  "pages.home.features.customization.description": "Freesm Launcher має власну тему з кольорами catppuccin та значками Microsoft Fluent.  Крім того, лаунчер також дозволяє налаштовувати меню, підтримує власні теми та фони (навіть gif).",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
   "footer.about.link.contribute": "Зробити внесок",
@@ -31,15 +31,15 @@
   "footer.project.title": "Проєкт",
   "footer.project.source-code": "Вихідний код",
   "footer.project.github-issues": "Github Issues",
-  "launcher.add-instance": "",
-  "launcher.folders": "",
-  "launcher.settings": "",
-  "launcher.help": "",
-  "launcher.update": "",
-  "launcher.no-default-account": "",
-  "launcher.manage-accounts": "",
-  "launcher.more-news": "",
-  "launcher.maintainer": "",
+  "launcher.add-instance": "Додати збірку...",
+  "launcher.folders": "Папки",
+  "launcher.settings": "Налаштування...",
+  "launcher.help": "Допомога",
+  "launcher.update": "Оновити",
+  "launcher.no-default-account": "Немає облікового запису за замовчуванням",
+  "launcher.manage-accounts": "Управління обліковими записами...",
+  "launcher.more-news": "Усі новини",
+  "launcher.maintainer": "Супроводжуючий",
   "launcher.profile-hotkey": "Ctrl+0",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
