feat: implement an instancebar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,6 +41,8 @@
   "launcher.more-news": "More news",
   "launcher.maintainer": "Maintainer",
   "launcher.profile-hotkey": "Ctrl+0",
+  "launcher.ungrouped": "Ungrouped",
+  "launcher.placeholder-group": "Placeholders",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
