--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -41,6 +41,8 @@
   "launcher.more-news": "Усі новини",
   "launcher.maintainer": "Супроводжуючий",
   "launcher.profile-hotkey": "Ctrl+0",
+  "launcher.ungrouped": "",
+  "launcher.placeholder-group": "",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
