feat: implement an instance button context menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,6 +43,17 @@
   "launcher.profile-hotkey": "Ctrl+0",
   "launcher.ungrouped": "Ungrouped",
   "launcher.placeholder-group": "Placeholders",
+  "launcher.launch": "Launch",
+  "launcher.kill": "Kill",
+  "launcher.edit": "Edit",
+  "launcher.change-group": "Change Group",
+  "launcher.folder": "Folder",
+  "launcher.export": "Export",
+  "launcher.copy": "Copy",
+  "launcher.delete": "Delete",
+  "launcher.create-shortcut": "Create Shortcut",
+  "launcher.rename": "Rename",
+  "launcher.change-icon": "Change Icon",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
