--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -43,6 +43,17 @@
   "launcher.profile-hotkey": "Ctrl+0",
   "launcher.ungrouped": "",
   "launcher.placeholder-group": "",
+  "launcher.launch": "",
+  "launcher.kill": "",
+  "launcher.edit": "",
+  "launcher.change-group": "",
+  "launcher.folder": "",
+  "launcher.export": "",
+  "launcher.copy": "",
+  "launcher.delete": "",
+  "launcher.create-shortcut": "",
+  "launcher.rename": "",
+  "launcher.change-icon": "",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
