feat: implement a launcher modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,6 +54,10 @@
   "launcher.create-shortcut": "Create Shortcut",
   "launcher.rename": "Rename",
   "launcher.change-icon": "Change Icon",
+  "launcher.confirm-deletion.title": "Confirm Deletion",
+  "launcher.confirm-deletion.description": "You are about to delete «%s».\nThis may be permanent and will completely delete the instance.\n\nAre you sure?",
+  "launcher.yes": "Yes",
+  "launcher.no": "No",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
