--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -54,6 +54,10 @@
   "launcher.create-shortcut": "",
   "launcher.rename": "",
   "launcher.change-icon": "",
+  "launcher.confirm-deletion.title": "",
+  "launcher.confirm-deletion.description": "",
+  "launcher.yes": "",
+  "launcher.no": "",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
