--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -39,6 +39,7 @@
   "launcher.no-default-account": "Немає облікового запису за замовчуванням",
   "launcher.manage-accounts": "Управління обліковими записами...",
   "launcher.more-news": "Усі новини",
+  "launcher.website-in-vue": "Цей вебсайт був написаний на Vue <3",
   "launcher.maintainer": "Супроводжуючий",
   "launcher.profile-hotkey": "Ctrl+0",
   "launcher.ungrouped": "",
