--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -39,6 +39,7 @@
   "launcher.no-default-account": "Нет учётной записи по умолчанию",
   "launcher.manage-accounts": "Управление учётными записями...",
   "launcher.more-news": "Все новости",
+  "launcher.website-in-vue": "Этот сайт был написан на Vue <3",
   "launcher.maintainer": "Сопровождающий",
   "launcher.profile-hotkey": "Ctrl+0",
   "launcher.ungrouped": "",
