feat: implement a launcher status bar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,6 +59,11 @@
   "launcher.confirm-deletion.description": "You are about to delete «%s».\nThis may be permanent and will completely delete the instance.\n\nAre you sure?",
   "launcher.yes": "Yes",
   "launcher.no": "No",
+  "launcher.no-instance-selection": "No instance selected",
+  "launcher.specific-time-played": "total played for",
+  "launcher.time-played": "Time played",
+  "launcher.minutes-short": "min",
+  "launcher.seconds-short": "s",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
