--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -59,6 +59,11 @@
   "launcher.confirm-deletion.description": "",
   "launcher.yes": "",
   "launcher.no": "",
+  "launcher.no-instance-selection": "",
+  "launcher.specific-time-played": "",
+  "launcher.time-played": "",
+  "launcher.minutes-short": "",
+  "launcher.seconds-short": "",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
