feat: add more russian & ukrainian translations

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -42,28 +42,28 @@
   "launcher.website-in-vue": "Этот сайт был написан на Vue <3",
   "launcher.maintainer": "Сопровождающий",
   "launcher.profile-hotkey": "Ctrl+0",
-  "launcher.ungrouped": "",
-  "launcher.placeholder-group": "",
-  "launcher.launch": "",
-  "launcher.kill": "",
-  "launcher.edit": "",
-  "launcher.change-group": "",
-  "launcher.folder": "",
-  "launcher.export": "",
-  "launcher.copy": "",
-  "launcher.delete": "",
-  "launcher.create-shortcut": "",
-  "launcher.rename": "",
-  "launcher.change-icon": "",
-  "launcher.confirm-deletion.title": "",
-  "launcher.confirm-deletion.description": "",
-  "launcher.yes": "",
-  "launcher.no": "",
-  "launcher.no-instance-selection": "",
-  "launcher.specific-time-played": "",
-  "launcher.time-played": "",
-  "launcher.minutes-short": "",
-  "launcher.seconds-short": "",
+  "launcher.ungrouped": "Без группы",
+  "launcher.placeholder-group": "Остальное",
+  "launcher.launch": "Запустить",
+  "launcher.kill": "Остановить",
+  "launcher.edit": "Редактировать...",
+  "launcher.change-group": "Изменить группу",
+  "launcher.folder": "Папка",
+  "launcher.export": "Экспортировать...",
+  "launcher.copy": "Копировать...",
+  "launcher.delete": "Удалить",
+  "launcher.create-shortcut": "Создать ярлык",
+  "launcher.rename": "Переименовать",
+  "launcher.change-icon": "Выбрать иконку",
+  "launcher.confirm-deletion.title": "Подтвердить удаление",
+  "launcher.confirm-deletion.description": "Вы собираетесь удалить «%s».\nЭто действие необратимо и полностью удалит сборку.\n\nВы уверены?",
+  "launcher.yes": "Да",
+  "launcher.no": "Нет",
+  "launcher.no-instance-selection": "Не выбрана сборка",
+  "launcher.specific-time-played": "сыграно за всё время",
+  "launcher.time-played": "Всего наиграно",
+  "launcher.minutes-short": "мин",
+  "launcher.seconds-short": "с",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
