--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -42,28 +42,28 @@
   "launcher.website-in-vue": "Цей вебсайт був написаний на Vue <3",
   "launcher.maintainer": "Супроводжуючий",
   "launcher.profile-hotkey": "Ctrl+0",
-  "launcher.ungrouped": "",
-  "launcher.placeholder-group": "",
-  "launcher.launch": "",
-  "launcher.kill": "",
-  "launcher.edit": "",
-  "launcher.change-group": "",
-  "launcher.folder": "",
-  "launcher.export": "",
-  "launcher.copy": "",
-  "launcher.delete": "",
-  "launcher.create-shortcut": "",
-  "launcher.rename": "",
-  "launcher.change-icon": "",
-  "launcher.confirm-deletion.title": "",
-  "launcher.confirm-deletion.description": "",
-  "launcher.yes": "",
-  "launcher.no": "",
-  "launcher.no-instance-selection": "",
-  "launcher.specific-time-played": "",
-  "launcher.time-played": "",
-  "launcher.minutes-short": "",
-  "launcher.seconds-short": "",
+  "launcher.ungrouped": "Без групи",
+  "launcher.placeholder-group": "Інше",
+  "launcher.launch": "Запустити",
+  "launcher.kill": "Зупинити",
+  "launcher.edit": "Редагувати...",
+  "launcher.change-group": "Змінити групу",
+  "launcher.folder": "Папка",
+  "launcher.export": "Експортувати...",
+  "launcher.copy": "Копіювати...",
+  "launcher.delete": "Видалити",
+  "launcher.create-shortcut": "Створити ярлик",
+  "launcher.rename": "Перейменувати",
+  "launcher.change-icon": "Вибрати іконку",
+  "launcher.confirm-deletion.title": "Підтвердити видалення",
+  "launcher.confirm-deletion.description": "Ви збираєтеся видалити «%s».\nЦя дія є незворотною та повністю видалить збірку.\n\nВи впевнені?",
+  "launcher.yes": "Так",
+  "launcher.no": "Ні",
+  "launcher.no-instance-selection": "Не вибрано збірку",
+  "launcher.specific-time-played": "загальний час гри",
+  "launcher.time-played": "Усього награно",
+  "launcher.minutes-short": "хв",
+  "launcher.seconds-short": "с",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
