feat: improve details section translations

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -19,6 +19,9 @@
   "pages.home.features.performance.description": "Лаунчер занимает всего 30 мегабайт ОЗУ и работает невероятно шустро благодаря Qt toolkit.",
   "pages.home.features.customization.title": "Кастомизация",
   "pages.home.features.customization.description": "В Freesm Launcher встроена собственная тема с цветами catppuccin и иконками Microsoft Fluent. Помимо этого, лаунчер позволяет настраивать меню, поддерживает кастомные темы и фоны (даже гифки).",
+  "pages.home.details.mod-management.title": "Менеджмент модов",
+  "pages.home.details.modpack-importing.title": "Импорт модпаков",
+  "pages.home.details.more-auth-servers.title": "Больше серверов аутентификации",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
