--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,9 @@
   "pages.home.features.performance.description": "Freesm Launcher has incredible speed and takes up only 30 megabytes of RAM thanks to Qt toolkit.",
   "pages.home.features.customization.title": "Customization",
   "pages.home.features.customization.description": "Freesm Launcher has its own theme with catppuccin colors and Microsoft Fluent icons. In addition, the launcher also allows you to customize the menu, supports custom themes and backgrounds (even gifs).",
+  "pages.home.details.mod-management.title": "Mod Management",
+  "pages.home.details.modpack-importing.title": "Modpack Importing",
+  "pages.home.details.more-auth-servers.title": "More Auth Servers",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
   "footer.about.link.contribute": "Contribute",
