--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -19,6 +19,9 @@
   "pages.home.features.performance.description": "Freesm Launcher має неймовірну швидкість і займає лише 30 мегабайт оперативної пам’яті завдяки інструментарію Qt.",
   "pages.home.features.customization.title": "Налаштування",
   "pages.home.features.customization.description": "Freesm Launcher має власну тему з кольорами catppuccin та значками Microsoft Fluent.  Крім того, лаунчер також дозволяє налаштовувати меню, підтримує власні теми та фони (навіть gif).",
+  "pages.home.details.mod-management.title": "Менеджмент модів",
+  "pages.home.details.modpack-importing.title": "Імпорт модпаків",
+  "pages.home.details.more-auth-servers.title": "Більше серверів автентифікації",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
   "footer.about.link.contribute": "Зробити внесок",
