feat: add a team section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,12 @@
   "pages.home.details.mod-management.title": "Mod Management",
   "pages.home.details.modpack-importing.title": "Modpack Importing",
   "pages.home.details.more-auth-servers.title": "More Auth Servers",
+  "pages.home.team.maintainers.title": "Maintainers",
+  "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
+  "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
+  "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
+  "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
+  "pages.home.team.contributors.title": "Contributors",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
   "footer.about.link.contribute": "Contribute",
