--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,6 +22,12 @@
   "pages.home.details.mod-management.title": "Менеджмент модов",
   "pages.home.details.modpack-importing.title": "Импорт модпаков",
   "pages.home.details.more-auth-servers.title": "Больше серверов аутентификации",
+  "pages.home.team.maintainers.title": "Сопровождающие проекта",
+  "pages.home.team.maintainers.list.so5iso4ka.description": "Любитель C++",
+  "pages.home.team.maintainers.list.kaeeraa.description": "Страстный problem-solver, увлечён Linux (NixOS) и приложениями с открытым исходным кодом.",
+  "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS-энтузиаст, автор идеи. Мейнтейнер связанного с Nix контента, также известный как hand7s",
+  "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
+  "pages.home.team.contributors.title": "Внесли вклад",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
