--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -22,6 +22,12 @@
   "pages.home.details.mod-management.title": "Менеджмент модів",
   "pages.home.details.modpack-importing.title": "Імпорт модпаків",
   "pages.home.details.more-auth-servers.title": "Більше серверів автентифікації",
+  "pages.home.team.maintainers.title": "Супроводжуючі проєкту",
+  "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
+  "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
+  "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
+  "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
+  "pages.home.team.contributors.title": "Ті, хто зробили внесок",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
   "footer.about.link.contribute": "Зробити внесок",
