feat: add a special thanks section with @ElyPrismLauncher

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,7 @@
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Contributors",
+  "pages.home.team.special.title": "Special Thanks",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
   "footer.about.link.contribute": "Contribute",
