--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -28,6 +28,7 @@
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS-энтузиаст, автор идеи. Мейнтейнер связанного с Nix контента, также известный как hand7s",
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Внесли вклад",
+  "pages.home.team.special.title": "Особая благодарность",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
