--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -28,6 +28,7 @@
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Ті, хто зробили внесок",
+  "pages.home.team.special.title": "Особлива подяка",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
   "footer.about.link.contribute": "Зробити внесок",
