feat: add a link to website's github

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,6 +41,7 @@
   "footer.project.title": "Project",
   "footer.project.source-code": "Source Code",
   "footer.project.github-issues": "Github Issues",
+  "footer.project.website": "Website Code",
   "launcher.add-instance": "Add Instance",
   "launcher.folders": "Folders",
   "launcher.settings": "Settings",
