--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -41,6 +41,7 @@
   "footer.project.title": "Проект",
   "footer.project.source-code": "Исходный код",
   "footer.project.github-issues": "Github Issues",
+  "footer.project.website": "Код сайта",
   "launcher.add-instance": "Добавить сборку...",
   "launcher.folders": "Папки",
   "launcher.settings": "Настройки...",
