--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -41,6 +41,7 @@
   "footer.project.title": "Проєкт",
   "footer.project.source-code": "Вихідний код",
   "footer.project.github-issues": "Github Issues",
+  "footer.project.website": "Код сайту",
   "launcher.add-instance": "Додати збірку...",
   "launcher.folders": "Папки",
   "launcher.settings": "Налаштування...",
