feat: add translations for menu-bar context menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,6 +75,9 @@
   "launcher.time-played": "Time played",
   "launcher.minutes-short": "min",
   "launcher.seconds-short": "s",
+  "launcher.news-toggle": "News Toolbar",
+  "launcher.status-toggle": "Status Toolbar",
+  "launcher.instance-toggle": "Instance Toolbar",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
