--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -75,6 +75,9 @@
   "launcher.time-played": "Всего наиграно",
   "launcher.minutes-short": "мин",
   "launcher.seconds-short": "с",
+  "launcher.news-toggle": "Панель новостей",
+  "launcher.status-toggle": "Панель состояния",
+  "launcher.instance-toggle": "Панель установки игры",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
