--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -75,6 +75,9 @@
   "launcher.time-played": "Усього награно",
   "launcher.minutes-short": "хв",
   "launcher.seconds-short": "с",
+  "launcher.news-toggle": "Панель новин",
+  "launcher.status-toggle": "Панель стану",
+  "launcher.instance-toggle": "Панель встановлення гри",
   "users.windstone_": "windstone_",
   "users.hand7s": "hand7s",
   "users.kaeeraa": "kaeeraa",
