refactor: rewrite features section

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,14 +11,12 @@
   "pages.home.hero.title": "Установите Freesm Launcher для",
   "pages.home.hero.description": "Freesm Launcher - это кастомный лаунчер для Майнкрафта, который позволяет играть в него бесплатно.",
   "pages.home.hero.download-now": "Скачать",
-  "pages.home.features.open-source.title": "Открытый исходный код",
-  "pages.home.features.open-source.description": "Freesm Launcher - это форк Prism Launcher с открытым исходным кодом, который находится под лицензией GPL-3.0.",
-  "pages.home.features.drm-free.title": "Без DRM",
-  "pages.home.features.drm-free.description": "С лёгкостью играйте в Майнкрафт без каких-либо ограничений, даже если у Вас нет лицензионного аккаунта.",
-  "pages.home.features.performance.title": "Производительность",
-  "pages.home.features.performance.description": "Лаунчер занимает всего 30 мегабайт ОЗУ и работает невероятно шустро благодаря Qt toolkit.",
+  "pages.home.features.more-auth-servers.title": "",
+  "pages.home.features.more-auth-servers.description": "",
   "pages.home.features.customization.title": "Кастомизация",
-  "pages.home.features.customization.description": "В Freesm Launcher встроена собственная тема с цветами catppuccin и иконками Microsoft Fluent. Помимо этого, лаунчер позволяет настраивать меню, поддерживает кастомные темы и фоны (даже гифки).",
+  "pages.home.features.customization.description": "В Freesm Launcher встроена собственная тема с цветами catppuccin и иконками Microsoft Fluent. Лаунчер также позволяет ставить анимированные фоны.",
+  "pages.home.features.other.title": "",
+  "pages.home.features.other.description": "",
   "pages.home.team.maintainers.title": "Сопровождающие проекта",
   "pages.home.team.maintainers.list.so5iso4ka.description": "Любитель C++",
   "pages.home.team.maintainers.list.kaeeraa.description": "Страстный problem-solver, увлечён Linux (NixOS) и приложениями с открытым исходным кодом.",
