--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,14 +11,12 @@
   "pages.home.hero.title": "Download Freesm Launcher for",
   "pages.home.hero.description": "Freesm Launcher is a custom launcher for Minecraft that allows you to play with offline account without any restrictions.",
   "pages.home.hero.download-now": "Download Now",
-  "pages.home.features.open-source.title": "Open Source",
-  "pages.home.features.open-source.description": "Freesm Launcher is an open source fork of Prism Launcher. All launcher code is available under the GPL-3.0 license.",
-  "pages.home.features.drm-free.title": "DRM-free",
-  "pages.home.features.drm-free.description": "Easily play Minecraft without any restrictions, even if you don't have an online account.",
-  "pages.home.features.performance.title": "Performance",
-  "pages.home.features.performance.description": "Freesm Launcher has incredible speed and takes up only 30 megabytes of RAM thanks to Qt toolkit.",
+  "pages.home.features.more-auth-servers.title": "More Auth Servers",
+  "pages.home.features.more-auth-servers.description": "Use offline accounts without any restrictions, or Ely.by and other custom authentication servers to play Minecraft.",
   "pages.home.features.customization.title": "Customization",
-  "pages.home.features.customization.description": "Freesm Launcher has its own theme with catppuccin colors and Microsoft Fluent icons. In addition, the launcher also allows you to customize the menu, supports custom themes and backgrounds (even gifs).",
+  "pages.home.features.customization.description": "Freesm Launcher has its own theme with catppuccin colors and Microsoft Fluent icons. It also allows you to set animated cat packs with background cropping support.",
+  "pages.home.features.other.title": "Other Features",
+  "pages.home.features.other.description": "Automatically copy in-game screenshots to your buffer history, show your current instance on Discord, play with Ely.by skins on servers, and more with Freesm!",
   "pages.home.team.maintainers.title": "Maintainers",
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
