--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -11,14 +11,12 @@
   "pages.home.hero.title": "Встановіть Freesm Launcher для",
   "pages.home.hero.description": "Freesm Launcher — це кастомний лаунчер для Minecraft, який дозволяє грати з офлайн-акаунтом без будь-яких обмежень.",
   "pages.home.hero.download-now": "Завантажити",
-  "pages.home.features.open-source.title": "Відкритий вихідний код",
-  "pages.home.features.open-source.description": "Freesm Launcher — це форк Prism Launcher з відкритим вихідним кодом, який знаходиться під ліцензією GPL-3.0.",
-  "pages.home.features.drm-free.title": "Без DRM",
-  "pages.home.features.drm-free.description": "Легко грайте в Minecraft без обмежень, навіть якщо у вас немає онлайн-акаунту.",
-  "pages.home.features.performance.title": "Продуктивність",
-  "pages.home.features.performance.description": "Freesm Launcher має неймовірну швидкість і займає лише 30 мегабайт оперативної пам’яті завдяки інструментарію Qt.",
+  "pages.home.features.more-auth-servers.title": "",
+  "pages.home.features.more-auth-servers.description": "",
   "pages.home.features.customization.title": "Налаштування",
-  "pages.home.features.customization.description": "Freesm Launcher має власну тему з кольорами catppuccin та значками Microsoft Fluent.  Крім того, лаунчер також дозволяє налаштовувати меню, підтримує власні теми та фони (навіть gif).",
+  "pages.home.features.customization.description": "Freesm Launcher має власну тему з кольорами catppuccin та значками Microsoft Fluent. Лаунчер також дозволяє ставити анімовані фони.",
+  "pages.home.features.other.title": "",
+  "pages.home.features.other.description": "",
   "pages.home.team.maintainers.title": "Супроводжуючі проєкту",
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
