feat: add other section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,7 +16,7 @@
   "pages.home.features.customization.title": "Customization",
   "pages.home.features.customization.description": "Freesm Launcher has its own theme with catppuccin colors and Microsoft Fluent icons. It also allows you to set animated cat packs with background cropping support.",
   "pages.home.features.other.title": "Other Features",
-  "pages.home.features.other.description": "Automatically copy in-game screenshots to your buffer history, show your current instance on Discord, play with Ely.by skins on servers, and more with Freesm!",
+  "pages.home.features.other.description": "Automatically copy in-game screenshots to your buffer history, show your current instance on Discord, play with Ely.by skins on servers, and more!",
   "pages.home.team.maintainers.title": "Maintainers",
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
