--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,12 +11,12 @@
   "pages.home.hero.title": "Установите Freesm Launcher для",
   "pages.home.hero.description": "Freesm Launcher - это кастомный лаунчер для Майнкрафта, который позволяет играть в него бесплатно.",
   "pages.home.hero.download-now": "Скачать",
-  "pages.home.features.more-auth-servers.title": "",
-  "pages.home.features.more-auth-servers.description": "",
+  "pages.home.features.more-auth-servers.title": "Больше серверов аутентификации",
+  "pages.home.features.more-auth-servers.description": "Играйте в Minecraft без лицензии или с Ely.by и другими серверами аутентификации.",
   "pages.home.features.customization.title": "Кастомизация",
   "pages.home.features.customization.description": "В Freesm Launcher встроена собственная тема с цветами catppuccin и иконками Microsoft Fluent. Лаунчер также позволяет ставить анимированные фоны.",
-  "pages.home.features.other.title": "",
-  "pages.home.features.other.description": "",
+  "pages.home.features.other.title": "Прочие фишки",
+  "pages.home.features.other.description": "Автоматически копируйте скриншоты в буфер обмена, отображайте игру в Discord, играйте со скинами Ely.by на серверах и многое другое!",
   "pages.home.team.maintainers.title": "Сопровождающие проекта",
   "pages.home.team.maintainers.list.so5iso4ka.description": "Любитель C++",
   "pages.home.team.maintainers.list.kaeeraa.description": "Страстный problem-solver, увлечён Linux (NixOS) и приложениями с открытым исходным кодом.",
