--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -11,12 +11,12 @@
   "pages.home.hero.title": "Встановіть Freesm Launcher для",
   "pages.home.hero.description": "Freesm Launcher — це кастомний лаунчер для Minecraft, який дозволяє грати з офлайн-акаунтом без будь-яких обмежень.",
   "pages.home.hero.download-now": "Завантажити",
-  "pages.home.features.more-auth-servers.title": "",
-  "pages.home.features.more-auth-servers.description": "",
+  "pages.home.features.more-auth-servers.title": "Більше серверів автентифікації",
+  "pages.home.features.more-auth-servers.description": "Грайте у Minecraft без ліцензії або з Ely.by та іншими серверами автентифікації.",
   "pages.home.features.customization.title": "Налаштування",
   "pages.home.features.customization.description": "Freesm Launcher має власну тему з кольорами catppuccin та значками Microsoft Fluent. Лаунчер також дозволяє ставити анімовані фони.",
-  "pages.home.features.other.title": "",
-  "pages.home.features.other.description": "",
+  "pages.home.features.other.title": "Інші фішки",
+  "pages.home.features.other.description": "Автоматично копіюйте скріншоти в буфер обміну, відображайте гру в Discord, грайте зі скінами Ely.by на серверах та багато іншого!",
   "pages.home.team.maintainers.title": "Супроводжуючі проєкту",
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
