feat: translate prism features section

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -15,8 +15,8 @@
   "pages.home.features.more-auth-servers.description": "Играйте в Minecraft без лицензии или с Ely.by и другими серверами аутентификации.",
   "pages.home.features.customization.title": "Кастомизация",
   "pages.home.features.customization.description": "В Freesm Launcher встроена собственная тема с цветами catppuccin и иконками Microsoft Fluent. Лаунчер также позволяет ставить анимированные фоны.",
-  "pages.home.features.prism.title": "",
-  "pages.home.features.prism.description": "",
+  "pages.home.features.prism.title": "Основан на Prism",
+  "pages.home.features.prism.description": "Freesm написан на основе Prism Launcher, поэтому в нём будут все функции Prism'а, например, управление сборками и модпаками.",
   "pages.home.features.other.title": "Прочие фишки",
   "pages.home.features.other.description": "Автоматически копируйте скриншоты в буфер обмена, отображайте игру в Discord, играйте со скинами Ely.by на серверах и многое другое!",
   "pages.home.team.maintainers.title": "Сопровождающие проекта",
