--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -15,8 +15,8 @@
   "pages.home.features.more-auth-servers.description": "Грайте у Minecraft без ліцензії або з Ely.by та іншими серверами автентифікації.",
   "pages.home.features.customization.title": "Налаштування",
   "pages.home.features.customization.description": "Freesm Launcher має власну тему з кольорами catppuccin та значками Microsoft Fluent. Лаунчер також дозволяє ставити анімовані фони.",
-  "pages.home.features.prism.title": "",
-  "pages.home.features.prism.description": "",
+  "pages.home.features.prism.title": "Заснований на Prism",
+  "pages.home.features.prism.description": "Freesm написаний на основі Prism Launcher, тому в ньому будуть усі функції Prism'а, наприклад, керування збірками та модпаками.",
   "pages.home.features.other.title": "Інші фішки",
   "pages.home.features.other.description": "Автоматично копіюйте скріншоти в буфер обміну, відображайте гру в Discord, грайте зі скінами Ely.by на серверах та багато іншого!",
   "pages.home.team.maintainers.title": "Супроводжуючі проєкту",
