feat: change translations

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,7 +7,7 @@
   "routes.downloads.name": "Скачать",
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Темы",
-  "general.locale": "Язык",
+  "general.other": "Прочее",
   "pages.home.hero.title": "Установите Freesm Launcher для",
   "pages.home.hero.description": "Freesm Launcher - это кастомный лаунчер для Майнкрафта, который позволяет играть в него бесплатно.",
   "pages.home.hero.download-now": "Скачать",
