--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -7,7 +7,7 @@
   "routes.downloads.name": "Завантажити",
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Теми",
-  "general.locale": "Мова",
+  "general.other": "Інше",
   "pages.home.hero.title": "Встановіть Freesm Launcher для",
   "pages.home.hero.description": "Freesm Launcher — це кастомний лаунчер для Minecraft, який дозволяє грати з офлайн-акаунтом без будь-яких обмежень.",
   "pages.home.hero.download-now": "Завантажити",
