--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
   "routes.downloads.name": "Downloads",
   "routes.faq.name": "FAQ",
   "routes.themes.name": "Themes",
-  "general.locale": "Locale",
+  "general.other": "Other",
   "pages.home.hero.title": "Download Freesm Launcher for",
   "pages.home.hero.description": "Freesm Launcher is a custom launcher for Minecraft that allows you to play with offline account without any restrictions.",
   "pages.home.hero.download-now": "Download Now",
