feat: update team titles in Polish translations
Signed-off-by: mqsaya <yamqsaya@gmail.com>

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -19,12 +19,12 @@
   "pages.home.features.prism.description": "Freesm opiera się na kodzie Prism Launcher, więc możesz oczekiwać wszystkich jego funkcji, takich jak zarządzanie paczkami modów i instancjami.",
   "pages.home.features.other.title": "Inne funkcje",
   "pages.home.features.other.description": "Automatycznie kopiuj zrzuty ekranu z gry do historii schowka, pokazuj swoją obecną instancję na Discordzie, korzystaj ze skinów Ely.by wszędzie i wiele więcej!",
-  "pages.home.team.maintainers.title": "Współpracownicy",
+  "pages.home.team.maintainers.title": "Współtwórcy",
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
-  "pages.home.team.contributors.title": "Współtwórcy",
+  "pages.home.team.contributors.title": "Współpracownicy",
   "pages.home.team.special.title": "Specjalne podziękowania",
   "footer.short-description": "Inny sposób na darmową grę w Minecrafta.",
   "footer.about.title": "O projekcie",
